[tool.poetry]
name = "scoring-api"
version = "0.1.0"
description = "See README"
authors = ["me"]

[tool.poetry.dependencies]
python = "^3.8"
redis = "4.0.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
fakeredis = "1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"